--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Яшина Елизавета</title>
+    <meta name="google-site-verification" content="5utslzp_KcrqyK6TpiUY1yfhTsfrupx-tSRflEyVUTk" />
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
